--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,9 @@ thead{
 .heading{
     font-size: 25px;
 }
-
+.body{
+    position: relative;
+}
 .wraper{
     position: relative;
 }
@@ -31,6 +33,7 @@ form .fbt{
     position: relative;
    
 }
+
 .profile-img img{
    width: 100px;
    height: 100px;
@@ -50,4 +53,41 @@ form .fbt{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.bg-white1{
+    background-color: #FFFFFF;
+}
+.bg-white1 h1{
+    font-weight: 400;
+}
+.signin{
+    position: absolute;
+    background-color: #F8FAFD;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    z-index: 1;
+    background-size: cover;
+}
+.signin img{
+    width: 70px;
+}
+.singin-bg{
+    background-color: #F0F4F9;
+}
+.bt{
+    background-color: transparent;
+    color: #0D6EFD;
+    border: none;
+}
+.bt:hover{
+    background-color: #EDF0F5;
+    color: #0D6EFD;
+}
+.bd{
+    border-radius: 30px;
+}
+.signin button img{
+    width: 40px;
+   
 }
