--- a/src/index.css
+++ b/src/index.css
@@ -1,58 +1,69 @@
-.inpu{
+.inpu {
   width: 100%;
 }
-form{
+form {
   width: 40%;
 }
-.profile{
-  background-color: red;
+.profile {
   width: 50px;
   height: 50px;
-
 }
-#navbarScroll{
+input {
+  margin-left: 30px;
+}
+.profile img {
+  width: 50px;
+  height: 50px;
+}
+.navbar i{
+  font-size: 25px;
+}
+.navbar .dropdown-toggle::after {
+  display: none; 
+}
+#navbarScroll {
   display: flex;
   justify-content: space-between;
 }
-.icons{
+.icons {
   display: flex;
   flex-wrap: wrap;
 }
-.icons i{
- font-size: 25px;
- justify-content: center;
- align-items: center;
- display: flex;
- padding: 15px;
+.icons i {
+  font-size: 25px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  padding: 15px;
 }
-.sidebar{
-  height: 100Vh;
-  background-color: #F8FAFD;
+.sidebar {
+  height: 90vh;
+  background-color: #f8fafd;
 }
-.bg-blu{
-  background-color: #C2E7FF;
+.bg-blu {
+  background-color: #c2e7ff;
   border: none;
   border-radius: 15px;
   font-weight: 400;
   font-size: 20px;
 }
-.bt{
+.bt {
   padding-left: 15px;
   padding-right: 15px;
   font-size: 20px;
 }
-table{
+table {
   width: 100%;
 }
- .img-1{
+.img-1 {
   width: 50px;
   height: 50px;
 }
-a{
+a {
   list-style: none;
   text-decoration: none;
-  color: #0158CC;
+  color: #0158cc;
 }
-input{
+input {
   padding-left: 10px;
 }
